--- a/index.html
+++ b/index.html
@@ -74,5 +74,69 @@
 	    </div> <!-- .image-footer -->
 	  </li>
 	</ul>
+	<ul class="bottom">
+	 <li class="extra">
+	    <a href="https://octodex.github.com/gobbleotron">
+	      <img src="https://octodex.github.com/images/gobbleotron.gif"/>
+	      </a>
+	      <div class="image-bottom">
+	        <span class="number">120</span>
+	        <div class="caption">
+	      <span>the</span>
+	      <a href="https://octodex.github.com/gobbleotron">Gobble-o-tron
+	      </a>
+	      <span>by</span>
+	      <ul class="artists">
+	        <li>
+	          <a href="https://github.com/JohnCreek">
+	          <img src="https://github.com/JohnCreek.png">
+	          </a>
+	        </li>
+	      </ul>
+	     </div><!-- .image-caption -->
+	    </div><!-- .image-footer -->
+	  </li>
+	  <li class="extra">
+	    <a href="https://octodex.github.com/jetpacktocat">
+	      <img src="https://octodex.github.com/images/jetpacktocat.png" />
+	    </a>
+	    <div class="image-bottom">
+	      <span class="number">119</span>
+	      <div class="caption">
+	        <span>the</span>
+	        <a href="https://octodex.github.com/jetpacktocat">Jetpacktocat</a>
+	        <span>by</span>
+	        <ul class="artists">
+	          <li>
+	            <a href="https://github.com/tonyjaramillo">
+	              <img src="https://github.com/tonyjaramillo.png" />
+	            </a>
+	            
+	          </li>
+	        </ul>
+	      </div> <!-- .image-caption -->
+	    </div> <!-- .image-footer -->
+	  </li>
+	  <li class="extra">
+	    <a href="https://octodex.github.com/minertocat">
+	      <img src="https://octodex.github.com/images/minertocat.png"/>
+	    </a>
+	    <div class="image-bottom">
+	      <span class="number">118</span>
+	      <div class="caption">
+	        <span>the</span>
+	        <a href="https://octodex.github.com/minertocat">Minertocat</a>
+	        <span>by</span>
+	        <ul class="artists">
+	          <li>
+	            <a href="https://github.com/jeejkang">
+	              <img src="https://github.com/jeejkang" />
+	            </a>
+	          </li>
+	        </ul>
+	      </div> <!-- .image-caption -->
+	    </div> <!-- .image-footer -->
+	  </li>
+	</ul>  
 </body>
 </html>
