--- a/index.html
+++ b/index.html
@@ -72,71 +72,74 @@
 	        </ul>
 	      </div> <!-- .image-caption -->
 	    </div> <!-- .image-footer -->
-	  </li>
-	</ul>
-	<ul class="bottom">
-	 <li class="extra">
-	    <a href="https://octodex.github.com/gobbleotron">
-	      <img src="https://octodex.github.com/images/gobbleotron.gif"/>
-	      </a>
-	      <div class="image-bottom">
-	        <span class="number">120</span>
-	        <div class="caption">
-	      <span>the</span>
-	      <a href="https://octodex.github.com/gobbleotron">Gobble-o-tron
-	      </a>
-	      <span>by</span>
-	      <ul class="artists">
-	        <li>
-	          <a href="https://github.com/JohnCreek">
-	          <img src="https://github.com/JohnCreek.png">
-	          </a>
-	        </li>
-	      </ul>
-	     </div><!-- .image-caption -->
-	    </div><!-- .image-footer -->
-	  </li>
-	  <li class="extra">
-	    <a href="https://octodex.github.com/jetpacktocat">
-	      <img src="https://octodex.github.com/images/jetpacktocat.png" />
+		</li>
+		<li class="octocat">
+	    <a href="https://octodex.github.com/saritocat">
+	      <img src="https://octodex.github.com/images/saritocat.png" />
 	    </a>
-	    <div class="image-bottom">
-	      <span class="number">119</span>
-	      <div class="caption">
+	    <div class="image-footer">
+	      <span class="image-number">115</span>
+	      <div class="image-caption">
 	        <span>the</span>
-	        <a href="https://octodex.github.com/jetpacktocat">Jetpacktocat</a>
+	        <a href="https://octodex.github.com/saritocat">Saritocat</a>
 	        <span>by</span>
-	        <ul class="artists">
+	        <ul class="authors">
 	          <li>
+	            <a href="https://github.com/JohnCreek">
+	              <img src="https://github.com/JohnCreek.png" />
+	            </a>
+	          </li>
+	        </ul>
+	      </div> <!-- .image-caption -->
+	    </div> <!-- .image-footer -->
+	  </li>
+	  <li class="octocat">
+	    <a href="https://octodex.github.com/topguntocat">
+	      <img src="https://octodex.github.com/images/topguntocat.png" />
+	    </a>
+	    <div class="image-footer">
+	      <span class="image-number">114</span>
+	      <div class="image-caption">
+	        <span>the</span>
+	        <a href="https://octodex.github.com/topguntocat">Topguntocat</a>
+	        <span>by</span>
+	        <ul class="authors">
+	          <li>
+	            <a href="https://github.com/leereilly">
+	              <img src="https://github.com/leereilly.png" />
+	            </a>
+	            <a href="https://github.com/jeejkang">
+	              <img src="https://github.com/jeejkang.png" />
+	            </a>
 	            <a href="https://github.com/tonyjaramillo">
 	              <img src="https://github.com/tonyjaramillo.png" />
 	            </a>
-	            
 	          </li>
 	        </ul>
 	      </div> <!-- .image-caption -->
 	    </div> <!-- .image-footer -->
 	  </li>
-	  <li class="extra">
-	    <a href="https://octodex.github.com/minertocat">
-	      <img src="https://octodex.github.com/images/minertocat.png"/>
+	  <li class="octocat">
+	    <a href="https://octodex.github.com/carlostocat">
+	      <img src="https://octodex.github.com/images/carlostocat.gif" />
 	    </a>
-	    <div class="image-bottom">
-	      <span class="number">118</span>
-	      <div class="caption">
+	    <div class="image-footer">
+	      <span class="image-number">113</span>
+	      <div class="image-caption">
 	        <span>the</span>
-	        <a href="https://octodex.github.com/minertocat">Minertocat</a>
+	        <a href="https://octodex.github.com/carlostocat">Carlostocat</a>
 	        <span>by</span>
-	        <ul class="artists">
+	        <ul class="authors">
 	          <li>
 	            <a href="https://github.com/jeejkang">
-	              <img src="https://github.com/jeejkang" />
+	              <img src="https://github.com/jeejkang.png" />
 	            </a>
 	          </li>
 	        </ul>
 	      </div> <!-- .image-caption -->
 	    </div> <!-- .image-footer -->
 	  </li>
-	</ul>  
+	</ul>
+	
 </body>
 </html>
